@@ -14,6 +14,15 @@ tmpldir	@@CONFDIR@@/templates
 # Make graphs show values per minute instead of per second
 #graph_period minute
 
+# Drop somejuser@fnord.comm and anotheruser@blibb.comm an email everytime 
+# something changes (OK -> WARNING, CRITICAL -> OK, etc)
+#contact.someuser.command mail -s "Munin notification" somejuser@fnord.comm
+#contact.anotheruser.command mail -s "Munin notification" anotheruser@blibb.comm
+#
+# For those with Nagios, the following might come in handy. In addition,
+# the services must be defined in the Nagios server as well.
+#contact.nagios.command /usr/bin/send_nsca nagios.host.comm -c /etc/nsca.conf >/dev/null
+
 # a simple host tree
 [@@HOSTNAME@@]
     address 127.0.0.1
@@ -43,12 +52,13 @@ tmpldir	@@CONFDIR@@/templates
 #       load2.graph_title Loads on top of each other
 #       load2.dummy_field.stack fii=fii.foo.com:load.load fay=fay.foo.com:load.load
 #       load2.dummy_field.draw AREA # We want area instead the default LINE2.
+#       load2.dummy_field.label dummy # This is needed. Silly, really.
 #
 #   # The graph "load3". Now we want them summarised into one field
 #       load3.graph_title Loads summarised
 #       load3.combined_loads.sum fii.foo.com:load.load fay.foo.com:load.load
-#       load3.combined_loads.title Combined loads # Must be set, as this is
-#                                                # not a dummy field!
+#       load3.combined_loads.label Combined loads # Must be set, as this is
+#                                                 # not a dummy field!
 #
 ## ...and on a side note, I want them listen in another order (default is
 ## alphabetically)
